--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
-/*  your css code here. If applicable */
+ th, td {
+	padding: 0.5rem;
+	margin: 100px; 
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+tr:nth-child(odd) {
+  background-color: #ffffff;
+}
